# serpent-rs

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
examples/: generate-black-scholes-dataset.py  transpile-local.rs  transpile-simple.rs  transpile_black_scholes.rs  transpile_simple.rs
examples/input/: simple.py
examples/py/: simple.py  typed_add.py
examples/py/black_scholes/: Remap.toml  __init__.py  black_scholes.py  black_scholes_dp.py  black_scholes_ndp.py
examples/rs/: simple.rs  typed_add.rs
src/: builder.rs  config.rs  error.rs  lib.rs  output.rs  py_module.rs  tests.rs  transpile.rs  transpile_v0.rs  transpile_v1.rs  transpiler.rs
src/fmt/: mod.rs  py.rs  rs.rs
src/transpile/: ast_to_ast.rs  codegen.rs  config.rs  context.rs  identify_lines.rs  mod.rs  parser_ext.rs  python.rs  recontextualize.rs  remap_functions.rs  rust.rs  visit.rs
src/transpile/ast_to_ast/: dummy.rs  from_py.rs  mod.rs  util.rs
src/transpile/codegen/: fidelity_print.rs  mod.rs
src/transpile/context/: DefaultRemaps.toml  error_strategy.rs  handler.rs  print.rs  remap.rs
src/transpile/rs_ast/: mod.rs
src/transpile_v0/: cursor.rs  identify_lines.rs  recontextualize.rs  visit.rs
tests/: rustpython.rs  transpile-statements.rs
tests/input/: simple_multiline.py  simple_multiline.rs
