[package]
name = "serpent"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
edition = "2018"

[lib]
name = "serpent"
path = "src/lib.rs"

[[example]]
name = "transpile_simple"
path = "examples/transpile_simple.rs"

[[example]]
name = "transpile_black_scholes"
path = "examples/transpile_black_scholes.rs"

[dependencies]
# Python AST
rustpython-parser = { path = "../RustPython/parser" }
# `num-bigint` "0.3" matching with `rustpython-parser` "master"
num-bigint = "0.3"

# The Rust AST used by rustc. Auto-published from the Rust-repository.
rustc-ap-rustc_ast = "673.0.0"
# Dependencies of rustc_ast "673.0.0"
rustc-ap-rustc_span = "673.0.0"
rustc-ap-rustc_data_structures = "673.0.0"

derive_deref = "^1.1"
log = "^0.4"
pretty_env_logger = "^0.3"
rustfmt = "^0.10"
color-backtrace = "^0.3"
ctor = "0.1.14"
thiserror = "^1.0"
itertools = "^0.9"
# Let's try out codegen
codegen = "0.1.3"
lazy_static = "^1.4"
normalize-line-endings = "0.3.0"

[dev-dependencies]
sourcefile = "^0.1"
anyhow = "^1.0"
test-case = "^1.0"
