[package]
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
edition = "2018"
name = "serpent"
version = "0.1.0"

[lib]
name = "serpent"
path = "src/lib.rs"

[[example]]
name = "transpile_simple"
path = "examples/transpile_simple.rs"

[[example]]
name = "transpile_black_scholes"
path = "examples/transpile_black_scholes.rs"

[dependencies]
# Python AST
rustpython-ast = {git = "https://github.com/hegza/rustpython", branch = "serpent"}
rustpython-parser = {git = "https://github.com/hegza/rustpython", branch = "serpent"}
# `num-bigint` "0.3" matching with `rustpython-parser`
num-bigint = "0.3"

# The Rust AST used by rustc. Auto-published from the Rust-repository.
rustc-ap-rustc_ast = "694.0.0"
# Dependencies of rustc_ast "694.0.0"
rustc-ap-rustc_ast_pretty = "694.0.0"
rustc-ap-rustc_data_structures = "694.0.0"
rustc-ap-rustc_span = "694.0.0"

color-backtrace = "^0.5"
ctor = "^0.1"
derive_deref = "^1.1"
itertools = "^0.10"
lazy_static = "^1.4"
log = "^0.4"
normalize-line-endings = "^0.3"
pretty_env_logger = "^0.4"
rustfmt = "^0.10"
thiserror = "^1.0"
# Drop-in replacement for std::fs with better errors.
fs-err = "^2.5"
toml = "^0.5"

[dev-dependencies]
anyhow = "^1.0"
sourcefile = "^0.1"
# This is the newest test-case that is not broken by depending on "syn = *"
test-case = "0.3.0"
